--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,7 +4,8 @@ on:
     types:
       - created
   pull_request:
-
+env:
+  GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
 jobs:
   publish:
     runs-on: ubuntu-latest
