--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,8 +4,8 @@ on:
     types:
       - created
   pull_request:
-env:
-  GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
+permissions:
+  contents: write
 jobs:
   publish:
     runs-on: ubuntu-latest
