--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,6 +18,7 @@ jobs:
         run: |
           git config --global user.email "thomas.kammerlocher@cardanofoundation.org"
           git config --global user.name "Thomas Kammerlocher"
+          git pull
           git add pom.xml
           git commit -m "Upgrading Pom.xml"
           git push origin HEAD:feat/docker-push
