--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,7 @@ jobs:
           git config --global user.email "thomas.kammerlocher@cardanofoundation.org"
           git config --global user.name "Thomas Kammerlocher"
           git pull origin feat/docker-push
+          git config pull.rebase true
           git add pom.xml
           git commit -m "Upgrading Pom.xml"
           git push origin HEAD:feat/docker-push
