--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,8 +2,7 @@ name: Release Version
 on:
   release:
     types:
-      - created
-  pull_request:
+      - published
 permissions:
   contents: write
 jobs:
@@ -12,23 +11,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Upgrade Maven Package
-        run: mvn -B versions:set -DnewVersion=0.0.1 -DgenerateBackupPoms=false
-      - name: Push Pom
-        run: |
-          git config --global user.email "thomas.kammerlocher@cardanofoundation.org"
-          git config --global user.name "Thomas Kammerlocher"
-          git config pull.rebase true
-          git pull origin feat/docker-push
-          git add pom.xml
-          git commit -m "Upgrading Pom.xml"
-          git push origin HEAD:feat/docker-push
-#      - name: Login to Docker Hub
-      #        uses: docker/login-action@v3
-      #        with:
-      #          username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      #      - name: Build Docker Image
-      #        run: docker build -t kammerlo/cardano-bolnisi-aggregator:0.0.1 .
-      #      - name: Push Docker Image
-      #        run: docker push kammerlo/cardano-bolnisi-aggregator:0.0.1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build Docker Image
+        run: docker build -t kammerlo/cardano-bolnisi-aggregator:${github.event.release.tag_name}  .
+      - name: Push Docker Image
+        run: docker push kammerlo/cardano-bolnisi-aggregator:${github.event.release.tag_name}
